verify security config